--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
         <div class="standings-container" id="standingsContainer">
             <h2 class="standings-title" onclick="toggleStandings()">
-                🏆 League Standings
+                 🏅 League Standings
                 <button class="standings-toggle" id="standingsToggleBtn">Hide</button>
             </h2>
             <div class="standings-content" id="standingsContent">
