--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #f5f5f5;
             background-attachment: fixed;
             padding: 20px;
             min-height: 100vh;
