--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         
         .match-content {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             gap: 20px;
         }
