--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             gap: 20px;
         }
         
-        .team { flex: 1; display: flex; align-items: center; gap: 15px; }
+        .team { flex: 0 0 auto; display: flex; align-items: center; gap: 15px; }
         .team.home { justify-content: flex-start; }
         .team.away { justify-content: flex-end; flex-direction: row-reverse; }
         .team-logo { width: 50px; height: 50px; object-fit: contain; }
