--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             gap: 10px;
             font-size: 2em;
             font-weight: bold;
-            min-width: 120px;
+            width: 150px;
             justify-content: center;
         }
         
