--- a/index.html
+++ b/index.html
@@ -206,9 +206,15 @@
             gap: 20px;
         }
         
-        .team { flex: 0 0 auto; display: flex; align-items: center; gap: 15px; }
-        .team.home { justify-content: flex-start; }
-        .team.away { justify-content: flex-end; flex-direction: row-reverse; }
+        .team { 
+            flex: 0 0 auto; 
+            display: flex; 
+            align-items: center; 
+            gap: 15px; 
+            width: 350px;
+        }
+        .team.home { justify-content: flex-end; }
+        .team.away { justify-content: flex-start; flex-direction: row-reverse; }
         .team-logo { width: 50px; height: 50px; object-fit: contain; }
         .team-name { font-size: 1.2em; font-weight: 600; color: #333; }
         
