--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
             gap: 15px; 
             width: 350px;
         }
-        .team.home { justify-content: flex-end; }
-        .team.away { justify-content: flex-start; flex-direction: row-reverse; }
+        .team.home { justify-content: flex-start; }
+        .team.away { justify-content: flex-end; flex-direction: row-reverse; }
         .team-logo { width: 50px; height: 50px; object-fit: contain; }
         .team-name { font-size: 1.2em; font-weight: 600; color: #333; }
         
