--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
         .match-info { display: flex; gap: 15px; align-items: center; font-size: 0.9em; color: #666; }
         
         .matchday {
-            background: #667eea;
-            color: white;
+            background: #e0e0e0;
+            color: #333;
             padding: 5px 12px;
             border-radius: 20px;
             font-weight: 600;
