--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
         .error { background: #f44336; color: white; padding: 20px; border-radius: 12px; text-align: center; }
         
         .youtube-btn {
-            display: inline-block;
-            margin-top: 15px;
+            display: block;
+            margin: 15px auto 0 auto;
             padding: 10px 20px;
             background: #ff0000;
             color: white;
@@ -256,6 +256,7 @@
             font-weight: 600;
             transition: background 0.3s;
             text-align: center;
+            width: fit-content;
         }
         
         .youtube-btn:hover {
