--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </header>
 
         <div class="league-selector" id="leagueSelector">
-            <h2 style="margin-bottom: 20px; color: #333;">🏆 Select League</h2>
+            <h2 style="margin-bottom: 20px; color: #333; font-size: 1.8em; font-weight: bold;">🏆 Select League</h2>
             <div id="leagueButtons" class="league-buttons"></div>
         </div>
 
