--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             font-size: 0.85em;
         }
         
-        .status.finished { background: #e0e0e0; color: #333; }
+        .status.finished { background: #4caf50; color: white; }
         .status.scheduled { background: #ff9800; color: white; }
         .status.timed { background: #2196f3; color: white; }
         
