--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             gap: 15px;
             flex-wrap: wrap;
             align-items: center;
+            justify-content: center;
         }
         
         .filters label { font-weight: 600; color: #333; }
