--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
         }
         
         .standings-table {
-            width: 100%;
+            width: auto;
             border-collapse: collapse;
+            margin: 0 auto;
         }
         
         .standings-table thead { 
