--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Leagues 2025/26</title>
+    <title>Football Highlights</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
