--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>⚽ Football Leagues 2025/26</h1>
+            <h1>⚽ Football Highlights</h1>
             <p class="subtitle">All Major Leagues</p>
         </header>
 
