--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             display: block;
             margin: 15px auto 0 auto;
             padding: 10px 20px;
-            background: #ff0000;
+            background: #c8102e;
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -273,7 +273,7 @@
         }
         
         .youtube-btn:hover {
-            background: #cc0000;
+            background: #a00d25;
         }
         
         /* Mobile optimizations */
