--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>⚽ Football Highlights</h1>
+            <h1>Football Highlights</h1>
             <p class="subtitle">All Major Leagues</p>
         </header>
 
