--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             container.innerHTML = '';
             
             // Define custom order for top leagues
-            const customOrder = ['CL', 'PD', 'PL', 'FL1', 'BL1'];
+            const customOrder = ['CL', 'PD', 'PL', 'FL1', 'BL1','SA'];
             
             // Separate leagues into priority and rest
             const priorityLeagues = [];
