--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
             }
             
             .league-buttons {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 10px;
             }
             
             .filters {
