--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
             <div id="leagueButtons" class="league-buttons"></div>
         </div>
 
+        <!-- STANDINGS SECTION - HIDDEN FOR MINIMALIST VERSION
         <div class="standings-container" id="standingsContainer">
             <h2 class="standings-title" onclick="toggleStandings()">
                 League Standings
@@ -369,6 +370,7 @@
                 </table>
             </div>
         </div>
+        END STANDINGS SECTION -->
 
         <div class="filters" id="filtersContainer" style="display: none;">
             <label for="statusFilter">Status:</label>
