--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             document.getElementById('teamFilter').value = '';
             
             document.getElementById('filtersContainer').style.display = 'flex';
-            calculateAndDisplayStandings(currentMatches);
+            // calculateAndDisplayStandings(currentMatches); // COMMENTED OUT FOR MINIMALIST
             populateMatchdayFilter(currentMatches, savedMatchdayFilter);
         }
 
